@@ -9,11 +9,16 @@ Doc: $N$ being an integer and $P\in \Z[X]$, finds all integers $x$ with
  $|x| \leq X$ such that
  $$\gcd(N, P(x)) \geq B,$$
  using \idx{Coppersmith}'s algorithm, a famous application of the \idx{LLL}
- algorithm. The parameter $X$ must be smaller than
- $\exp(\log^2 B / (\deg(P) \log N))$: for $B = N$, this means
- $X < N^{1/\deg(P)}$. Some $x$ larger than $X$ may be returned if you are
- very lucky. The smaller $B$ (or the larger $X$), the slower the routine will
- be. The strength of Coppersmith method is the ability to find roots modulo a
+ algorithm meant to help in the factorization of $N$. The parameter $X$ must be
+ smaller than
+ $\exp(\log^2 (B/p) / (\deg(P) \log (N/p)))$, where $p$ is the gcd of the
+ leading coefficient of $P$ and $N$. In applications to factorization,
+ we should have $p = 1$ (otherwise we have factored $N$ if $p \neq N$
+ or we can reduce the degree of $P$); for $B = N$ and $p = 1$, the condition
+ means $X < N^{1/\deg(P)}$. Some $x$ larger than $X$ may be returned if you are
+ very lucky. The routine runs in polynomial time in $\deg(P)$ and $\log N$
+ but the smaller $B$, or the larger $X$, the slower.
+ The strength of Coppersmith method is the ability to find roots modulo a
  general \emph{composite} $N$: if $N$ is a prime or a prime power,
  \tet{polrootsmod} or \tet{polrootspadic} will be much faster.
 
