@@ -6,4 +6,10 @@
 3, -451, -409, -367, -325, -283, -241, -199, -157, -115, -73, -31, 11, 53, 9
 5, 137, 179, 221, 263, 305, 347, 389, 431, 473, 515, 557, 599, 641, 683, 725
 , 767, 809, 851, 893, 935, 977]
-Total time spent: 284
+  ***   at top-level: zncoppersmith(v*P,v*n,p,p*v)
+  ***                 ^----------------------------
+  *** zncoppersmith: overflow in zncoppersmith [bound too large].
+  ***   at top-level: zncoppersmith(x/2,10,5,5)
+  ***                 ^-------------------------
+  *** zncoppersmith: incorrect type in zncoppersmith (t_POL).
+Total time spent: 68
