@@ -54,6 +54,8 @@ BA  32- Using local in export()ed functions could crash GP
 XR  40- factorpadic: incorrect factors (might not lift to Qp)
         E.g. T=polsubcyclo(271,9); factorpadic(T,3,7)[4,1]
 BA  41- polcompositum(x^2+x/3+1,x^2+x/3+1) -> SEGV
+    42- p=nextprime(2^20);q=nextprime(2*p);n=q*p;v=n+1;P=x^2-1;
+        zncoppersmith(v*P,v*n,p,p*v) --> oo loop
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
